// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordChange /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="password-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <h1>
          Change your password
        </h1>
        <div
          className="row password"
        >
          <label
            htmlFor="password"
          >
            New Password
          </label>
          <input
            autoComplete="new-password"
            className="input"
            id="password"
            name="newPassword1"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="Your new Password"
            required={true}
            title="password must be a minimum of 6 characters"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row password-confirm"
        >
          <label
            htmlFor="password-confirm"
          >
            Confirm password
          </label>
          <input
            autoComplete="new-password"
            className="input"
            id="password-confirm"
            name="newPassword2"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="confirm password"
            required={true}
            title="password must be a minimum of 6 characters"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="Change Password"
          />
        </div>
      </div>
    </form>
    <Memo(Connect(Contact)) />
  </div>
</div>
`;

exports[`<PasswordChange /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="password-change"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <h1>
          PWD_CHANGE_TITL
        </h1>
        <div
          className="row password"
        >
          <label
            htmlFor="password"
          >
            PWD1_LBL
          </label>
          <input
            autoComplete="new-password"
            className="input"
            id="password"
            name="newPassword1"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="PWD1_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row password-confirm"
        >
          <label
            htmlFor="password-confirm"
          >
            CONFIRM_PWD_LBL
          </label>
          <input
            autoComplete="new-password"
            className="input"
            id="password-confirm"
            name="newPassword2"
            onChange={[Function]}
            pattern=".{6,}"
            placeholder="CONFIRM_PWD_PHOLD"
            required={true}
            title="PWD_PTRN_DESC"
            type="password"
            value=""
          />
          <PasswordToggleIcon
            hidePassword={true}
            inputRef={
              Object {
                "current": null,
              }
            }
            isVisible={false}
            parentClassName=""
            secondInputRef={
              Object {
                "current": null,
              }
            }
            toggler={[Function]}
          />
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="PASSWORD_CHANGE"
          />
        </div>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;
